[project]
name = "lsf_runner"
version = "0.12.0"
description = "Utility to start jobs under IBM LSF"
authors = [{ name = "Anton Golovanov" }]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lsf_runner*"]
